Adding many api, swagger definition, logger
